--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -88,8 +88,8 @@ main .container {
 .top-card img {
   object-fit: cover;
   object-position: center;
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .hover-img {
