--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -21,12 +21,6 @@ a {
 .container {
   max-width: 1100px;
   width: 80%;
-  margin: 50px auto;
-}
-
-.container2 {
-  max-width: 1100px;
-  width: 80%;
   margin: 0 auto;
 }
 
@@ -42,7 +36,7 @@ header {
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.4);
 }
 
-header .container2 {
+header .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -68,16 +62,18 @@ header .icons i {
 
 /* MAIN */
 main {
-  padding-top: 50px;
+  padding-top: 80px;
 }
 
 main .container {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .card {
-  max-width: 33%;
+  width: 32%;
+  margin: 20px 0;
 }
 
 .top-card {
@@ -166,7 +162,7 @@ footer {
   color: white;
 }
 
-footer .container2 {
+footer .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
